@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "46u [Tue 10 May 09:51:34 BST 2022]"
-BUILD = "05100951"
+VERSION = "46u [Thu 12 May 12:06:15 BST 2022]"
+BUILD = "05121206"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
